# xiao-prism-buddy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.ci  sdkconfig.default  sdkconfig.defaults  sdkconfig.old
docs/enclosure/: xiao-prism-bottom.stl  xiao-prism-top.stl
lib/: lv_conf.h
lib/TFT_eSPI/: .piopm
lib/TFT_eSPI/TFT_Drivers/: ST7789_Rotation.h
main/: CMakeLists.txt  Kconfig.projbuild  api_coingecko_com.pem  config.h  lv_conf.h  lv_port.cpp  lv_port.h  lv_port.hpp  main.cpp  open_meteo_com.pem  panel_st7789_mirror_x.h  panel_st7789_mirror_x.hpp  prism_driver.h  prism_driver.hpp  view_data.h
main/controller/: prism_controller.c  prism_controller.cpp  prism_controller.h
main/model/: json_helper.c  json_helper.h  prism_city.c  prism_city.h  prism_cryptocurrency.c  prism_cryptocurrency.h  prism_display.cpp  prism_display.h  prism_model.c  prism_model.cpp  prism_model.h  prism_sensor.cpp  prism_sensor.h  prism_storage.c  prism_storage.h  prism_time.c  prism_time.h  prism_weather.c  prism_weather.h  prism_wifi.c  prism_wifi.h
main/ui/: ui_coins_btc.c  ui_coins_doge.c  ui_coins_eth.c  ui_coins_xrp.c  ui_font_font0.c  ui_font_font1.c  ui_font_font2.c  ui_font_font3.c  ui_font_font4.c  ui_gifs_confetti.c  ui_gifs_fire.c  ui_gifs_hologram.c  ui_gifs_watermelon.c  ui_helpers.c  ui_helpers.h  ui_img_high_light_png.c  ui_img_humidity_png.c  ui_img_location_png.c  ui_img_low_light_png.c  ui_img_temp_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_disconnect_png.c  ui_weather_clear_day.c  ui_weather_clear_night.c  ui_weather_cloudy.c  ui_weather_partly_cloudy_day.c  ui_weather_partly_cloudy_night.c  ui_weather_rain.c  ui_weather_sleet.c  ui_weather_snow.c
main/view/: browser.c  browser.h  cryptocurrency.c  cryptocurrency.h  main.c  main.h  prism_view.c  prism_view.cpp  prism_view.h  prism_view.hpp  setting.c  setting.h  setting_24_hour_clock.c  setting_24_hour_clock.h  setting_brightness.c  setting_brightness.h  setting_fade_text.c  setting_fade_text.h
src/: main.cpp
